# Cadastro-de-livros

./: .gitignore  LivrosBD.db3  README.md  claLivrosBD.py  main.py  pyproject.toml
Cadastro/: claLivrosBD.py  config.py  core.py  database.py  main.py  models.py  settings.toml
antigos/: database_livros.py  main.py
