[tool.poetry]
name = "Cadastro de Livros"
version = "0.1.0"
description = "Programa para cadastrar livros usando Python."
authors = ["ManoelSaraiva <manoeljsaraiva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
