[tool.poetry]
name = "Cadastro de Livros"
version = "0.1.0"
description = "Programa para cadastrar livros usando Python."
authors = ["ManoelSaraiva <manoeljsaraiva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
sqlmodel = "^0.0.8"
dynaconf = "^3.1.9"
pydantic = "^1.10.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
